v1.5.5
* bugfix (unreported) for MODE_HOME_NO_BED not working
* Ticket #51: dynmap integration added
* Ticket #96: home name is "null" message in /homeinvite

v1.5.4.1 - May 5, 2012
* bugfix for an NPE on teleport, reported in comments
* made safe teleporting default to ON, can be disabled in config

v1.5.4 - May 4, 2012
* converted build system over to maven (finally stood up my own nexus
respository required to host dependent artifacts that aren't maven enabled).
This simplifies the build process to git cloning the source and then just
running 'mvn install'. Easy!
* Ticket #95: added time string messages to cooldowns, ie: "32 minutes 25
seconds remaining"
* Ticket #94: safe teleport, now settable via "config.safeTeleport" option
* Ticket #92: bed home request. See new bedHome documentation available at:
http://dev.bukkit.org/server-mods/homespawnplus/pages/bed-homes/
* localized time strings
* Ticket #89: home cost multiplier

v1.5.3 - April 20, 2012
* Ticket #93: named homes not working
* startup delay resolved. Default 'EBEANS' storage just uses Bukkit ebeans. To
use Persitance Reimplemented (http://goo.gl/rtdDH) which enables live-reload
(among other benefits, check link), you can use PERSISTANCE_REIMPLEMENTED_EBEANS
storage engine, at the cost of a ~0.75 second delay at startup.
* Added startup warnings for anyone using Essentials or CommandBook that also
gives brief instructions for how to make those plugins play nice with HSP.
* Updated Essentials home converter to Essentials 2.9 (most current version).
* Added converter for CommandBook. Since CommandBook can already import
MyHomes and warpz0r, this means users of those plugins can use the CommandBook
converter script and then import that into HSP. link: http://goo.gl/v0a0j

v1.5.2 - April 18, 2012
* Major refactor of strategies. End result if things were done right is
there should be no noticeable change to end users. However, the refactor
includes some performance improvements as well as signficantly more