@@ -1,7 +1,10 @@
 v1.5.5
 * bugfix (unreported) for MODE_HOME_NO_BED not working
-* Ticket #51: dynmap integration added
 * Ticket #96: home name is "null" message in /homeinvite
+* Ticket #98: delete homes with ID
+* Ticket #71: bug with singleGlobalHome home limits
+* Ticket #51: dynmap integration added (largely untested, looking for testers
+& feedback)
 
 v1.5.4.1 - May 5, 2012
 * bugfix for an NPE on teleport, reported in comments
